<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#70000000"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_widget_recipe_thumbnail"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:padding="4dp"
            android:src="@drawable/ic_photo_placeholder_24dp"
            android:contentDescription="@string/content_description_recipe_card_thumbnail"/>

        <TextView
            android:id="@+id/tv_widget_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:padding="4dp"
            android:text="@string/placeholder_recipe_card_name"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_widget_recipe_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:contentDescription="@string/content_description_ingredient_widget"
        android:text="@string/placeholder_recipe_detail_ingredients"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="italic" />

</LinearLayout>