<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".RecipeDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_recipe_detail_ingredients_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_detail_ingredients_heading"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_recipe_detail_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder_recipe_detail_ingredients"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_recipe_detail_preparation_steps_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recipe_detail_preparation_steps_heading"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>