<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_margin="16dp"
    tools:context=".fragments.StepDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/horizontal_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_step_detail_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pv_step_detail_video" />

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/pv_step_detail_video"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_step_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/placeholder_step_detail_description"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_divider" />

        <Button
            android:id="@+id/btn_step_detail_previous"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/placeholder_step_detail_button_previous"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_step_detail_description" />

        <Button
            android:id="@+id/btn_step_detail_next"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/placeholder_step_detail_button_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_step_detail_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>